# vecmath

./: CMakeLists.txt  README  README.md
bench/: CMakeLists.txt
cmake/: VecCoreLibConfig.cmake.in  VecCoreLibConfigVersion.cmake.in  VecMathConfig.cmake.in
doc/: utilities.md
include/: Config.in
include/VecCoreLib/: Math.h  Rng.h
include/VecCoreLib/Math/: FastExp.h  FastLog.h  FastPow.h  FastSinCos.h
include/VecCoreLib/Rng/: Gauss.h  JoiningProxyVecMRG32k3a.h  JoiningProxyVecRNG.h  MRG.h  MRG32k3a.h  Philox.h  VecRNG.h
include/VecMath/: Math.h  Rng.h
include/VecMath/Math/: FastExp.h  FastLog.h  FastPow.h  FastSinCos.h
include/VecMath/Rng/: Gamma.h  Gauss.h  JoiningProxyVecMRG32k3a.h  JoiningProxyVecRNG.h  MRG.h  MRG32k3a.h  PartialSumVec.h  Philox.h  R123.h  Threefry.h  VecRNG.h  lazco_approximation.h
include/math/: README.md
include/rng/: MRG32k3a.h  R123.h  README.md  Threefry.h  VecRNG.h
test/: CMakeLists.txt
test/MathTest/: CMakeLists.txt  MathTestBasic.cxx
test/MixMaxTest/: CMakeLists.txt  TestVecPartialSum.cxx  small.cxx
test/RngTest/: CMakeLists.txt  README.md
test/RngTest/cmake/modules/: MacroUtilities.cmake
test/RngTest/cmake/modules/FindCUDA/: run_nvcc.cmake
test/RngTest/inc/: PdfBenchmarker.h  PdfBenchmarker_cpu.h  PdfBenchmarker_gpu.h  RngBenchmarker.h  RngBenchmarker_cpu.h  RngBenchmarker_gpu.h  RngTest.h
test/RngTest/src/: PdfBenchmark.cc  PdfBenchmarker.cc  PdfBenchmarker.cu  PdfBenchmarker_cpu.cc  PdfBenchmarker_gpu.cu  RngBenchmark.cc  RngBenchmarker.cc  RngBenchmarker.cu  RngBenchmarker_cpu.cc  RngBenchmarker_gpu.cu  RngExample1.cc
test/math/: README.md
test/rng/: CMakeLists.txt  Config.cmake.in  README.md
test/rng/cmake/modules/: FindCUDA.cmake
test/rng/inc/: PdfBenchmarker.h  PdfBenchmarker_gpu.h  RngBenchmarker_cpu.h  RngBenchmarker_gpu.h  RngTest.h
test/rng/src/: PdfBenchmarker.cc  PdfBenchmarker.cu  PdfBenchmarker_cpu.cc  PdfBenchmarker_gpu.cu  RngBenchmarker_cpu.cc  RngBenchmarker_gpu.cu
